syntax = "proto3";

package ping;

// The ping message
message PingRequest {
  string message = 1;
}

message PingResponse {
  string message = 1;
}

service PingService {
  rpc sendPing(PingRequest) returns (PingResponse);
}
